# TextPutter

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  conandata.yml
include/TextPutter/: Application.hpp  SharedLocator.hpp  UniqueLocator.hpp
include/TextPutter/io/: Clock.hpp  Data.hpp  SDL.hpp  State.hpp
resuorce/: data.ini  data.yml
src/: Application.cpp  Locator.cpp  main.cpp
src/imgui/: imgui_impl_sdl3.cpp  imgui_impl_sdlrenderer3.cpp
